[gd_scene load_steps=5 format=2]

[ext_resource path="res://textures/Blocks/grass_block.png" type="Texture" id=1]
[ext_resource path="res://scripts/block.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="block" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FurnaceFuel" type="Timer" parent="."]
one_shot = true

[node name="FurnaceTop" type="Timer" parent="."]
wait_time = 0.455
one_shot = true

[node name="BlockCollide" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockCollide"]
shape = SubResource( 2 )
disabled = true

[node name="Sapling" type="Timer" parent="."]

[connection signal="timeout" from="FurnaceFuel" to="." method="_on_FurnaceFuel_timeout"]
[connection signal="timeout" from="FurnaceTop" to="." method="_on_FurnaceTop_timeout"]
[connection signal="timeout" from="Sapling" to="." method="_on_Sapling_timeout"]
